--- a/pom.xml
+++ b/pom.xml
@@ -50,9 +50,25 @@
             <artifactId>jersey-media-moxy</artifactId>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/io.swagger/swagger-jersey2-jaxrs -->
+		<dependency>
+    		<groupId>io.swagger</groupId>
+    		<artifactId>swagger-jersey2-jaxrs</artifactId>
+    		<version>1.6.2</version>
+		</dependency>
+
+		
+		<!-- https://mvnrepository.com/artifact/io.swagger/swagger-jaxrs -->
+		<dependency>
+    		<groupId>io.swagger</groupId>
+    		<artifactId>swagger-jaxrs</artifactId>
+    		<version>1.6.2</version>
+		</dependency>
+
+        
     </dependencies>
     <properties>
-        <jersey.version>2.16</jersey.version>
+        <jersey.version>2.25.1</jersey.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
